Bug 151640 - krunner crashed when clicking show/hide options
Summary: krunner crashed when clicking show/hide options
Status: RESOLVED FIXED
Alias: None
Product: krunner
Classification: Plasma
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR crash
Target Milestone: ---
Assignee: Aaron J. Seigo
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-10-31 19:20 UTC by Martin Koller
Modified: 2007-11-03 00:55 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Koller 2007-10-31 19:20:12 UTC
Version:           unknown (using KDE 3.95.00 (KDE 4.0 Beta4))
Compiler:          Target: i586-suse-linux
OS:                Linux (i686) release 2.6.18.8-0.7-default

I did right click on desktop -> run command -> typed "top", clicked on "show options", "hide options" -> crash:

[KCrash handler]
#9  0x00000019 in ?? ()
#10 0x08054125 in CollapsibleWidget::setExpanded (this=0x81bd4b0,
    expanded=false)
    at /home/KDE4/source/kdebase/workspace/krunner/collapsiblewidget.cpp:148
#11 0x08054ef9 in Interface::showOptions (this=0x812e6b0, show=false)
    at /home/KDE4/source/kdebase/workspace/krunner/interface.cpp:437
#12 0x08057f66 in Interface::qt_metacall (this=0x812e6b0,
    _c=QMetaObject::InvokeMetaMethod, _id=8, _a=0xbfb4f72c)
    at /mnt/usbstick/KDE4/build/kdebase/workspace/krunner/interface.moc:90
#13 0xb7d12b61 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#14 0xb7d13662 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#15 0xb77df829 in QAbstractButton::toggled () from /usr/lib/libQtGui.so.4
#16 0xb75cb8a6 in QAbstractButton::setChecked () from /usr/lib/libQtGui.so.4
#17 0xb75cb990 in QAbstractButton::nextCheckState ()
   from /usr/lib/libQtGui.so.4
#18 0xb75cb4df in QAbstractButtonPrivate::click () from /usr/lib/libQtGui.so.4
#19 0xb75cb740 in QAbstractButton::mouseReleaseEvent ()
   from /usr/lib/libQtGui.so.4
#20 0xb734b6b2 in QWidget::event () from /usr/lib/libQtGui.so.4
#21 0xb75cbde3 in QAbstractButton::event () from /usr/lib/libQtGui.so.4
#22 0xb7655ad2 in QPushButton::event () from /usr/lib/libQtGui.so.4
#23 0xb7307e10 in QApplicationPrivate::notify_helper ()
   from /usr/lib/libQtGui.so.4
#24 0xb730e147 in QApplication::notify () from /usr/lib/libQtGui.so.4
#25 0xb702112a in KApplication::notify (this=0xbfb502e8, receiver=0x816aa78,
    event=0xbfb4fc40)
    at /home/KDE4/source/kdelibs/kdeui/kernel/kapplication.cpp:319
#26 0xb7d019ab in QCoreApplication::notifyInternal ()
   from /usr/lib/libQtCore.so.4
#27 0xb735de26 in QETWidget::translateMouseEvent () from /usr/lib/libQtGui.so.4
#28 0xb735d543 in QApplication::x11ProcessEvent () from /usr/lib/libQtGui.so.4
#29 0xb738019b in x11EventSourceDispatch () from /usr/lib/libQtGui.so.4
#30 0xb621ede2 in g_main_context_dispatch ()
   from /opt/gnome/lib/libglib-2.0.so.0
#31 0xb6221e1f in QAbstractScrollArea::mouseReleaseEvent ()
   from /opt/gnome/lib/libglib-2.0.so.0
#32 0x0809da98 in ?? ()
#33 0x00000000 in ?? ()
#0  0xb7f39410 in ?? ()
Comment 1 Aaron J. Seigo 2007-11-03 00:55:40 UTC
SVN commit 732164 by aseigo:

* prevent crash on show/hide of options
* get button text right

probably have to disable the animation until Qt4.4 comes out due to horriffic, horriffic flicker.
BUG:151640


 M  +9 -13     collapsiblewidget.cpp  
 M  +26 -15    interface.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=732164