* prevent crash on show/hide of options * get button text right

probably have to disable the animation until Qt4.4 comes out due to horriffic, horriffic flicker.
BUG:151640

svn path=/trunk/KDE/kdebase/workspace/; revision=732164